[tool.poetry]
name = "flask-sample"
version = "1.0"
description = ""
authors = ["Matthew Carruth <carruthm@gmail.com>"]

[tool.poetry.dependencies]
Flask = "^2.2.2"
python = "^3.11"
python-logstash = "^0.4.8"
sqlalchemy = "^2.0.0"
alembic = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
